--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <title>Froll.net — Decentralized Social</title>
   <link rel="icon" href="froll_48.png" type="image/png"/>
   <link rel="stylesheet" href="style.css"/>
-
-  <!-- Ethers v5 (CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 </head>
 <body>
   <noscript>This app requires JavaScript to run.</noscript>
 
-  <!-- ===== TOP TIP BAR ===== -->
+  <!-- TIP BAR -->
   <div class="tipbar">
     <div class="tip-inner">
       <span>Tip: Use the Viction (VIC) network in MetaMask. On mobile, open in the wallet’s browser.</span>
@@ -21,7 +19,7 @@
     </div>
   </div>
 
-  <!-- ===== BRAND BAR ===== -->
+  <!-- BRAND BAR -->
   <header class="brandbar">
     <div class="brand-inner">
       <div class="brand-left">
@@ -31,35 +29,40 @@
           <div class="brand-sub">Decentralized. Uncensored. Free Speech.</div>
         </div>
       </div>
-
       <div class="brand-right">
-        <!-- price chip -->
         <span id="froll-price-usd" class="chip">1 FROLL ≈ — USD</span>
-
-        <!-- balances (ẩn khi guest) -->
         <span id="badge-froll" class="mini-badge" style="display:none;">0.00 FROLL</span>
         <span id="badge-vic" class="mini-badge" style="display:none;">0.00 VIC</span>
-
-        <!-- status + connect/disconnect -->
         <span id="wallet-status" class="status">Not connected</span>
         <button id="connect-wallet" class="btn">Connect Wallet</button>
-
-        <!-- guide link -->
         <a id="guide-link" class="guide" href="#" target="_blank" rel="noopener">Guide</a>
       </div>
     </div>
   </header>
 
-  <!-- ===== TRADE BAR (ở giữa, giống VinSocial) ===== -->
+  <!-- TRADE BAR -->
   <div class="tradebar">
     <button id="btn-open-swap" class="trade-btn">Trade FROLL/VIC</button>
   </div>
 
-  <!-- ===== MAIN (HOME / SOCIAL) ===== -->
+  <!-- QUICK NAV (giống VinSocial) -->
+  <div class="quicknav">
+    <div class="quicknav-inner">
+      <button id="qn-home" class="qn-btn">🏠 Home</button>
+      <button id="qn-profile" class="qn-btn">👤 My Profile</button>
+      <button id="qn-newpost" class="qn-btn">✍️ New Post</button>
+      <div class="qn-search">
+        <input id="feed-address" class="input" type="text" placeholder="Search wallet... (0x…)"/>
+        <button id="btn-search" class="btn small" title="Search">🔍</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- MAIN -->
   <main id="home-view" class="container">
     <h2 class="section-title">Latest Posts</h2>
 
-    <!-- Compose (ẩn khi guest) -->
+    <!-- Composer (ẩn nếu Guest) -->
     <section class="composer card" id="composer" style="display:none;">
       <div class="composer-head">
         <button id="register-account" class="btn ghost">Register (0.001 FROLL)</button>
@@ -72,18 +75,12 @@
       <div id="compose-msg" class="meta"></div>
     </section>
 
-    <!-- Feed controls -->
-    <div class="feed-controls">
-      <input id="feed-address" class="input" type="text" placeholder="Search wallet… (0x… optional)"/>
-      <button id="btn-refresh" class="btn ghost">Refresh</button>
-    </div>
-
     <!-- Feed list -->
     <section id="feed-list" class="feed"></section>
     <div id="feed-msg" class="meta meta-center">Reading posts from the Social contract. No wallet required.</div>
   </main>
 
-  <!-- ===== SWAP VIEW (chỉ hiện swap, ẩn mọi thứ khác) ===== -->
+  <!-- SWAP VIEW -->
   <section id="swap-view" class="swap-wrap" style="display:none;">
     <div class="swap-head">
       <button id="btn-back-home" class="btn ghost small">← Back to Home</button>
@@ -93,7 +90,6 @@
     <h2 class="swap-title">Swap</h2>
 
     <div class="swap-box">
-      <!-- From -->
       <div class="token-input">
         <img id="from-token-logo" src="vic_24.png" alt="From"/>
         <div class="token-col">
@@ -103,10 +99,8 @@
         <button id="max-button" class="btn tiny">Max</button>
       </div>
 
-      <!-- Direction -->
       <button id="swap-direction" class="swap-direction" aria-label="Change direction">↔</button>
 
-      <!-- To -->
       <div class="token-input">
         <img id="to-token-logo" src="froll_24.png" alt="To"/>
         <div class="token-col">
@@ -126,7 +120,7 @@
     </div>
   </section>
 
-  <!-- ===== FOOTER ===== -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="footer-inner">
       <span>FROLL ecosystem:</span>
@@ -137,7 +131,7 @@
     </div>
   </footer>
 
-  <!-- ===== Price chip logic (in-page) ===== -->
+  <!-- Price chip -->
   <script>
     (async function loadFrollPrice() {
       const el = document.getElementById("froll-price-usd");
@@ -146,15 +140,12 @@
         const j = await r.json();
         const vic = parseFloat(j?.price || "0");
         if (!isFinite(vic) || vic <= 0) throw new Error("Bad price");
-        const frollUsd = vic * 100; // cập nhật hệ số nếu mô hình giá đổi
+        const frollUsd = vic * 100;
         el.textContent = `1 FROLL ≈ ${frollUsd.toFixed(2)} USD`;
-      } catch {
-        el.textContent = "1 FROLL ≈ — USD";
-      }
+      } catch { el.textContent = "1 FROLL ≈ — USD"; }
     })();
   </script>
 
-  <!-- App -->
   <script src="app.js"></script>
 </body>
 </html>
