--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title>Froll.net — Decentralized Social</title>
   <link rel="icon" href="froll_48.png" type="image/png"/>
   <link rel="stylesheet" href="style.css"/>
+  <!-- Ethers v5 (CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 </head>
 <body>
   <noscript>This app requires JavaScript to run.</noscript>
 
-  <!-- TIP BAR -->
+  <!-- ===== TIP BAR ===== -->
   <div class="tipbar">
     <div class="tip-inner">
       <span>Tip: Use the Viction (VIC) network in MetaMask. On mobile, open in the wallet’s browser.</span>
@@ -19,7 +20,7 @@
     </div>
   </div>
 
-  <!-- BRAND BAR -->
+  <!-- ===== BRAND BAR ===== -->
   <header class="brandbar">
     <div class="brand-inner">
       <div class="brand-left">
@@ -30,22 +31,29 @@
         </div>
       </div>
       <div class="brand-right">
+        <!-- LUÔN hiện giá FROLL cả trên mobile -->
         <span id="froll-price-usd" class="chip">1 FROLL ≈ — USD</span>
+
+        <!-- Balances (ẩn khi Guest) -->
         <span id="badge-froll" class="mini-badge" style="display:none;">0.00 FROLL</span>
         <span id="badge-vic" class="mini-badge" style="display:none;">0.00 VIC</span>
+
+        <!-- Trạng thái + Connect/Disconnect -->
         <span id="wallet-status" class="status">Not connected</span>
         <button id="connect-wallet" class="btn">Connect Wallet</button>
+
+        <!-- Guide (để trống link, bạn thay sau) -->
         <a id="guide-link" class="guide" href="#" target="_blank" rel="noopener">Guide</a>
       </div>
     </div>
   </header>
 
-  <!-- TRADE BAR -->
+  <!-- ===== TRADE BAR ===== -->
   <div class="tradebar">
     <button id="btn-open-swap" class="trade-btn">Trade FROLL/VIC</button>
   </div>
 
-  <!-- QUICK NAV (giống VinSocial) -->
+  <!-- ===== QUICK NAV (giống vibe VinSocial) ===== -->
   <div class="quicknav">
     <div class="quicknav-inner">
       <button id="qn-home" class="qn-btn">🏠 Home</button>
@@ -58,17 +66,20 @@
     </div>
   </div>
 
-  <!-- MAIN -->
+  <!-- ===== MAIN (SOCIAL) ===== -->
   <main id="home-view" class="container">
     <h2 class="section-title">Latest Posts</h2>
 
-    <!-- Composer (ẩn nếu Guest) -->
+    <!-- Composer (ẩn khi Guest) -->
     <section class="composer card" id="composer" style="display:none;">
       <div class="composer-head">
+        <!-- Ẩn sau khi đã register -->
         <button id="register-account" class="btn ghost">Register (0.001 FROLL)</button>
       </div>
+
       <textarea id="post-content" rows="6" placeholder="Write your post… (up to ~60KB). Line breaks are preserved."></textarea>
       <input id="post-media" type="url" class="input" placeholder="Media URL (image/video) — optional"/>
+
       <div class="composer-actions">
         <button id="btn-publish" class="btn primary">New Post</button>
       </div>
@@ -77,10 +88,12 @@
 
     <!-- Feed list -->
     <section id="feed-list" class="feed"></section>
-    <div id="feed-msg" class="meta meta-center">Reading posts from the Social contract. No wallet required.</div>
+    <div id="feed-msg" class="meta meta-center">
+      Reading posts from the Social contract. No wallet required.
+    </div>
   </main>
 
-  <!-- SWAP VIEW -->
+  <!-- ===== SWAP VIEW (ẩn mọi thứ khác khi mở) ===== -->
   <section id="swap-view" class="swap-wrap" style="display:none;">
     <div class="swap-head">
       <button id="btn-back-home" class="btn ghost small">← Back to Home</button>
@@ -90,6 +103,7 @@
     <h2 class="swap-title">Swap</h2>
 
     <div class="swap-box">
+      <!-- From -->
       <div class="token-input">
         <img id="from-token-logo" src="vic_24.png" alt="From"/>
         <div class="token-col">
@@ -99,8 +113,10 @@
         <button id="max-button" class="btn tiny">Max</button>
       </div>
 
+      <!-- Direction -->
       <button id="swap-direction" class="swap-direction" aria-label="Change direction">↔</button>
 
+      <!-- To -->
       <div class="token-input">
         <img id="to-token-logo" src="froll_24.png" alt="To"/>
         <div class="token-col">
@@ -120,7 +136,7 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
+  <!-- ===== FOOTER ===== -->
   <footer class="footer">
     <div class="footer-inner">
       <span>FROLL ecosystem:</span>
@@ -131,7 +147,7 @@
     </div>
   </footer>
 
-  <!-- Price chip -->
+  <!-- ===== Price chip (hiển thị cả mobile) ===== -->
   <script>
     (async function loadFrollPrice() {
       const el = document.getElementById("froll-price-usd");
@@ -140,7 +156,7 @@
         const j = await r.json();
         const vic = parseFloat(j?.price || "0");
         if (!isFinite(vic) || vic <= 0) throw new Error("Bad price");
-        const frollUsd = vic * 100;
+        const frollUsd = vic * 100; // nếu mô hình đổi, chỉ sửa hệ số này
         el.textContent = `1 FROLL ≈ ${frollUsd.toFixed(2)} USD`;
       } catch { el.textContent = "1 FROLL ≈ — USD"; }
     })();
