--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
 
       <!-- Direction -->
-      <button id="swap-direction" class="swap-direction" aria-label="Change direction">↔</button>
+      <button id="swap-direction" class="swap-direction" aria-label="Change direction">↔️</button>
 
       <!-- To -->
       <div class="token-input">
