--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <span id="wallet-status" class="status">Not connected</span>
         <button id="connect-wallet" class="btn">Connect Wallet</button>
 
-        <!-- Guide (để trống link, bạn thay sau) -->
+        <!-- Guide -->
         <a id="guide-link" class="guide" href="#" target="_blank" rel="noopener">Guide</a>
       </div>
     </div>
@@ -52,7 +52,7 @@
     <button id="btn-open-swap" class="trade-btn">Trade FROLL/VIC</button>
   </div>
 
-  <!-- ===== QUICK NAV (giống vibe VinSocial) ===== -->
+  <!-- ===== QUICK NAV ===== -->
   <div class="quicknav">
     <div class="quicknav-inner">
       <button id="qn-home" class="qn-btn">🏠 Home</button>
@@ -72,7 +72,6 @@
     <!-- Composer (ẩn khi Guest) -->
     <section class="composer card" id="composer" style="display:none;">
       <div class="composer-head">
-        <!-- Ẩn sau khi đã register -->
         <button id="register-account" class="btn ghost">Register (0.001 FROLL)</button>
       </div>
 
@@ -146,8 +145,8 @@
     </div>
   </footer>
 
-  <!-- ===== Price chip (hiển thị cả mobile) ===== -->
   <script>
+    // Load Froll price and update display
     (async function loadFrollPrice() {
       const el = document.getElementById("froll-price-usd");
       try {
@@ -155,7 +154,7 @@
         const j = await r.json();
         const vic = parseFloat(j?.price || "0");
         if (!isFinite(vic) || vic <= 0) throw new Error("Bad price");
-        const frollUsd = vic * 100; // nếu mô hình đổi, chỉ sửa hệ số này
+        const frollUsd = vic * 100; // Adjust the ratio if necessary
         el.textContent = `1 FROLL ≈ ${frollUsd.toFixed(2)} USD`;
       } catch { el.textContent = "1 FROLL ≈ — USD"; }
     })();
