--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <title>Froll.net — Decentralized Social</title>
   <link rel="icon" href="froll_48.png" type="image/png"/>
   <link rel="stylesheet" href="style.css"/>
-  <!-- Ethers v5 (CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 </head>
 <body>
   <noscript>This app requires JavaScript to run.</noscript>
 
-  <!-- ===== TIP BAR ===== -->
+  <!-- TIP BAR -->
   <div class="tipbar">
     <div class="tip-inner">
       <span>Tip: Use the Viction (VIC) network in MetaMask. On mobile, open in the wallet’s browser.</span>
@@ -20,7 +19,7 @@
     </div>
   </div>
 
-  <!-- ===== BRAND BAR ===== -->
+  <!-- BRAND BAR -->
   <header class="brandbar">
     <div class="brand-inner">
       <div class="brand-left">
@@ -32,27 +31,21 @@
       </div>
       <div class="brand-right">
         <span id="froll-price-usd" class="chip">1 FROLL ≈ — USD</span>
-
-        <!-- Balances (ẩn khi Guest) -->
         <span id="badge-froll" class="mini-badge" style="display:none;">0.00 FROLL</span>
         <span id="badge-vic" class="mini-badge" style="display:none;">0.00 VIC</span>
-
-        <!-- Trạng thái + Connect/Disconnect -->
         <span id="wallet-status" class="status">Not connected</span>
         <button id="connect-wallet" class="btn">Connect Wallet</button>
-
-        <!-- Guide -->
         <a id="guide-link" class="guide" href="#" target="_blank" rel="noopener">Guide</a>
       </div>
     </div>
   </header>
 
-  <!-- ===== TRADE BAR ===== -->
+  <!-- TRADE BAR -->
   <div class="tradebar">
     <button id="btn-open-swap" class="trade-btn">Trade FROLL/VIC</button>
   </div>
 
-  <!-- ===== QUICK NAV ===== -->
+  <!-- QUICK NAV -->
   <div class="quicknav">
     <div class="quicknav-inner">
       <button id="qn-home" class="qn-btn">🏠 Home</button>
@@ -65,19 +58,17 @@
     </div>
   </div>
 
-  <!-- ===== MAIN (SOCIAL) ===== -->
+  <!-- MAIN (SOCIAL) -->
   <main id="home-view" class="container">
     <h2 class="section-title">Latest Posts</h2>
 
-    <!-- Composer (ẩn khi Guest) -->
+    <!-- Composer -->
     <section class="composer card" id="composer" style="display:none;">
       <div class="composer-head">
         <button id="register-account" class="btn ghost">Register (0.001 FROLL)</button>
       </div>
-
       <textarea id="post-content" rows="6" placeholder="Write your post… (up to ~60KB). Line breaks are preserved."></textarea>
       <input id="post-media" type="url" class="input" placeholder="Media URL (image/video) — optional"/>
-
       <div class="composer-actions">
         <button id="btn-publish" class="btn primary">New Post</button>
       </div>
@@ -86,20 +77,16 @@
 
     <!-- Feed list -->
     <section id="feed-list" class="feed"></section>
-    <div id="feed-msg" class="meta meta-center">
-      Reading posts from the Social contract. No wallet required.
-    </div>
+    <div id="feed-msg" class="meta meta-center">Reading posts from the Social contract. No wallet required.</div>
   </main>
 
-  <!-- ===== SWAP VIEW (ẩn mọi thứ khác khi mở) ===== -->
+  <!-- SWAP VIEW -->
   <section id="swap-view" class="swap-wrap" style="display:none;">
     <div class="swap-head">
       <button id="btn-back-home" class="btn ghost small">← Back to Home</button>
       <button id="btn-disconnect" class="btn small">Disconnect</button>
     </div>
-
     <h2 class="swap-title">Swap</h2>
-
     <div class="swap-box">
       <!-- From -->
       <div class="token-input">
@@ -134,7 +121,7 @@
     </div>
   </section>
 
-  <!-- ===== FOOTER ===== -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="footer-inner">
       <span>FROLL ecosystem:</span>
@@ -146,7 +133,6 @@
   </footer>
 
   <script>
-    // Load Froll price and update display
     (async function loadFrollPrice() {
       const el = document.getElementById("froll-price-usd");
       try {
@@ -154,7 +140,7 @@
         const j = await r.json();
         const vic = parseFloat(j?.price || "0");
         if (!isFinite(vic) || vic <= 0) throw new Error("Bad price");
-        const frollUsd = vic * 100; // Adjust the ratio if necessary
+        const frollUsd = vic * 100; // nếu mô hình đổi, chỉ sửa hệ số này
         el.textContent = `1 FROLL ≈ ${frollUsd.toFixed(2)} USD`;
       } catch { el.textContent = "1 FROLL ≈ — USD"; }
     })();
